# MandelbulbRender

./: ActiveClusters.json  CMakeLists.txt  Cluster.cpp  Cluster.h  CommandQueue.txt~  MandelbulberNotes  Render.sh~  RenderJob.cpp  RenderJob.h  ServerAWS.cpp  ServerAWS.h  Start.sh~  Temp.json~  Tunnel.sh~  Util.cpp  Util.h  defaults.txt  json.hpp  log.txt  main.cpp
Animations/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Catmul.cpp  Catmul.h  Color.cpp  Color.h  FractParam.cpp  FractParam.h  IFS.cpp  IFS.h  Light.cpp  Light.h  Plotter.cpp  Plotter.h  SymmetryVector.cpp  SymmetryVector.h
Animations/Filters/: CompoundFilter.cpp  CompoundFilter.h  Filter1f.cpp  Filter1f.h  Filter2f.cpp  Filter2f.h  Filter3f.cpp  Filter3f.h  MixedFilter.cpp  MixedFilter.h  PiecewiseFilter.cpp  PiecewiseFilter.h
Animations/Paths/: BasicPath.cpp  BasicPath.h  CompoundPath.cpp  CompoundPath.h  MixedPath.cpp  MixedPath.h  Path.cpp  Path.h  PathAnalyzer.cpp  PathAnalyzer.h  PathFactory.cpp  PathFactory.h  SplinePath.cpp  SplinePath.h
Keyframes/: keyframe00000.fract
LaunchSpecs/: test.json
RawKeyframes/: keyframe00000.fract
RemoteSetup/: Setup.sh  SetupHeadless.sh  SetupHeadless2.sh  SetupHeadlessBasic.sh  SetupHeadlessBasic.sh~  test.sh
